Fix: overflow header on smaller screen

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ header div {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 1em;
 }
 
